--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 	<div class="wrapper">
 		<!--Header-->
-		<header class="header">
+		<header class="header" id="header">
 			<div class="header__menu">
 				<div class="container">
 					<div class="header__stat stat">
@@ -823,7 +823,7 @@
 							</li>
 						</ul>
 					</nav>
-					<a href="#" class="arrow-top">
+					<a href="#" class="arrow-top" data-scroll="header">
 						<svg>
 							<use xlink:href="#arrow"></use>
 						</svg>
