--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
 	<!--Sprite-->
 	<svg style="display: none;">
+		<symbol id="home" viewBox="0 0 16 14">
+			<g>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M3.92513 5.66683L7.92602 1.66594L11.9269 5.66683H11.926V12.3335H3.92603V5.66683H3.92513ZM2.59269 6.99926L1.60815 7.98381L0.666016 7.04168L6.98401 0.723689C7.50426 0.203432 8.34777 0.203432 8.86803 0.723689L15.186 7.04168L14.2439 7.98381L13.2594 6.99929V12.3335C13.2594 13.0699 12.6624 13.6668 11.926 13.6668H3.92603C3.18965 13.6668 2.59269 13.0699 2.59269 12.3335V6.99926Z"/>
+			</g>
+		</symbol>
 		<symbol id="arrow" viewBox="0 0 16 16">
 			<g>
 				<path fill-rule="evenodd" clip-rule="evenodd" d="M11.7239 8.66672H2V7.33338H11.7239L7.5286 3.13812L8.47141 2.19531L14.2761 8.00005L8.47141 13.8048L7.5286 12.862L11.7239 8.66672Z"/>
@@ -226,7 +231,7 @@
 								<a href="#" class="nav__link">Вакансии</a>
 							</li>
 							<li>
-								<a href="#" class="nav__link">О Нас</a>
+								<a href="about.html" class="nav__link">О Нас</a>
 							</li>
 							<li>
 								<a href="#" class="nav__link">Контакты</a>
@@ -903,7 +908,7 @@
 	
 
 	<script src="assets/js/jquery-3.6.0.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<script src="assets/js/slick.js"></script>
 	<script src="assets/js/script.js"></script>
 </body>
 </html>
