--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
 	
 
 	<script src="assets/js/jquery-3.6.0.min.js"></script>
-	<script src="assets/js/slick.js"></script>
+	<script src="assets/js/slick.min.js"></script>
 	<script src="assets/js/script.js"></script>
 </body>
 </html>
