--- a/about.html
+++ b/about.html
@@ -712,7 +712,7 @@
 								<div class="reviews__photo">
 									<img data-fancybox="reviews" src="assets/images/reviews-photo_2.jpg" alt="">
 								</div>
-								<div class="reviews__autor">ОАО "Ковровский ЭМЗ"</div>
+								<div class="reviews__autor">ОАО "Магнитогорский МК"</div>
 							</div>
 						</div><!--/reviews__slide-->
 						<div class="reviews__slide">
@@ -720,7 +720,7 @@
 								<div class="reviews__photo">
 									<img data-fancybox="reviews" src="assets/images/reviews-photo_3.jpg" alt="">
 								</div>
-								<div class="reviews__autor">ОАО "Ковровский ЭМЗ"</div>
+								<div class="reviews__autor">ЗАО "Тольяттисинтез"	</div>
 							</div>
 						</div><!--/reviews__slide-->
 						<div class="reviews__slide">
@@ -728,7 +728,7 @@
 								<div class="reviews__photo">
 									<img data-fancybox="reviews" src="assets/images/reviews-photo_4.jpg" alt="">
 								</div>
-								<div class="reviews__autor">ОАО "Ковровский ЭМЗ"</div>
+								<div class="reviews__autor">ООО "Топливные системы"</div>
 							</div>
 						</div><!--/reviews__slide-->
 						<div class="reviews__slide">
@@ -736,7 +736,7 @@
 								<div class="reviews__photo">
 									<img data-fancybox="reviews" src="assets/images/reviews-photo_1.jpg" alt="">
 								</div>
-								<div class="reviews__autor">ОАО "Ковровский ЭМЗ"</div>
+								<div class="reviews__autor">ПАО "Силовые Машины"</div>
 							</div>
 						</div><!--/reviews__slide-->
 						<div class="reviews__slide">
@@ -750,6 +750,75 @@
 					</div>
 				</div>
 			</section><!--/reviews-->
+			<section class="testimonial bg-gray bg-line bg-line_right">
+				<div class="container">
+					<div class="testimonial__inner">
+						<div class="testimonial__info">
+							<div>
+								<div class="title-box">
+									<h2 class="title">Зарегистрированные товарные знаки</h2>
+									<div class="subtitle">Наши сертификаты</div>
+								</div>
+								<div class="description">Соответствие продукции НПО “Феникс” заявленным характеристикам обеспечивается за счет ряда организационных и технологических мероприятий, в том числе:</div>
+							</div>
+							<div class="slider-arrows">
+								<div class="slider-arrows__arrow slider-arrows__arrow_prev">
+									<svg>
+										<use xlink:href="#arrow"></use>
+									</svg>
+								</div>
+								<div class="slider-arrows__arrow slider-arrows__arrow_next">
+									<svg>
+										<use xlink:href="#arrow"></use>
+									</svg>
+								</div>
+							</div><!--/slider-arrows-->
+						</div>
+						<div class="testimonial__slider">
+							<div class="testimonial__slide">
+								<div class="testimonial__item">
+									<img src="assets/images/testimonial_1.jpg" data-fancybox="testimonial" alt="">
+								</div>
+							</div><!--/testimonial__slide-->
+							<div class="testimonial__slide">
+								<div class="testimonial__item">
+									<img src="assets/images/testimonial_2.jpg" data-fancybox="testimonial" alt="">
+								</div>
+							</div><!--/testimonial__slide-->
+							<div class="testimonial__slide">
+								<div class="testimonial__item">
+									<img src="assets/images/testimonial_3.jpg" data-fancybox="testimonial" alt="">
+								</div>
+							</div><!--/testimonial__slide-->
+							<div class="testimonial__slide">
+								<div class="testimonial__item">
+									<img src="assets/images/testimonial_4.jpg" data-fancybox="testimonial" alt="">
+								</div>
+							</div><!--/testimonial__slide-->
+							<div class="testimonial__slide">
+								<div class="testimonial__item">
+									<img src="assets/images/testimonial_5.jpg" data-fancybox="testimonial" alt="">
+								</div>
+							</div><!--/testimonial__slide-->
+							<div class="testimonial__slide">
+								<div class="testimonial__item">
+									<img src="assets/images/testimonial_6.jpg" data-fancybox="testimonial" alt="">
+								</div>
+							</div><!--/testimonial__slide-->
+							<div class="testimonial__slide">
+								<div class="testimonial__item">
+									<img src="assets/images/testimonial_3.jpg" data-fancybox="testimonial" alt="">
+								</div>
+							</div><!--/testimonial__slide-->
+							<div class="testimonial__slide">
+								<div class="testimonial__item">
+									<img src="assets/images/testimonial_4.jpg" data-fancybox="testimonial" alt="">
+								</div>
+							</div><!--/testimonial__slide-->
+						</div>
+					</div>
+				</div>
+			</section><!--/testimonial-->
 		</main>
 
 		<footer class="footer">
