--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 <body>
 	<!--Sprite-->
 	<svg style="display: none;">
+		<symbol id="arrow-unline" viewBox="0 0 8 12">
+			<g>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M2.27624 6.00005L7.13817 10.862L6.19536 11.8048L0.390625 6.00005L6.19536 0.195312L7.13817 1.13812L2.27624 6.00005Z"/>
+			</g>
+		</symbol>
+		<symbol id="plus-icon" viewBox="0 0 16 16">
+			<g>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M9 7H14V9H9V14H7V9H2V7H7V2H9V7Z"/>
+			</g>
+		</symbol>
+		<symbol id="minus-icon" viewBox="0 0 12 2">
+			<g>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M0 2V0H12V2H0Z"/>
+			</g>
+		</symbol>
 		<symbol id="home" viewBox="0 0 16 14">
 			<g>
 				<path fill-rule="evenodd" clip-rule="evenodd" d="M3.92513 5.66683L7.92602 1.66594L11.9269 5.66683H11.926V12.3335H3.92603V5.66683H3.92513ZM2.59269 6.99926L1.60815 7.98381L0.666016 7.04168L6.98401 0.723689C7.50426 0.203432 8.34777 0.203432 8.86803 0.723689L15.186 7.04168L14.2439 7.98381L13.2594 6.99929V12.3335C13.2594 13.0699 12.6624 13.6668 11.926 13.6668H3.92603C3.18965 13.6668 2.59269 13.0699 2.59269 12.3335V6.99926Z"/>
@@ -265,7 +280,7 @@
 								<a href="#" class="mobile-menu__link">Вакансии</a>
 							</li>
 							<li>
-								<a href="#" class="mobile-menu__link">О Нас</a>
+								<a href="about.html" class="mobile-menu__link">О Нас</a>
 							</li>
 							<li>
 								<a href="#" class="mobile-menu__link">Контакты</a>
@@ -821,7 +836,7 @@
 								<a href="#" class="nav__link">Вакансии</a>
 							</li>
 							<li>
-								<a href="#" class="nav__link">О Нас</a>
+								<a href="about.html" class="nav__link">О Нас</a>
 							</li>
 							<li>
 								<a href="#" class="nav__link">Контакты</a>
