--- a/service-labor.html
+++ b/service-labor.html
@@ -551,7 +551,71 @@
 					</div>
 				</div>
 			</div><!--/photo-slider-->
-
+			<section class="sertificats-list bg-gray bg-line bg-line__left">
+				<div class="container">
+					<div class="title-box">
+						<h2 class="title">Свидетельства<br> и сертификаты</h2>
+					</div>
+					<div class="sertificats-list__inner">
+						<a href="#" class="sertificats-list__item">
+							<div class="sertificats-list__info">
+								<span class="sertificats-list__name">Свидетельство об аттестации лаборатории № SP01.01.203.001</span>
+								<span class="sertificats-list__data">Действует до 19.01.2025</span>
+							</div>
+							<span class="sertificats-list__link">Посмотреть</span>
+						</a><!--/sertificats-list__item-->
+						<a href="#" class="sertificats-list__item">
+							<div class="sertificats-list__info">
+								<span class="sertificats-list__name">Заключение о состоянии измерительной лаборатории № ОЕИ 01.203.001	</span>
+								<span class="sertificats-list__data">Действует до 19.01.2025</span>
+							</div>
+							<span class="sertificats-list__link">Посмотреть</span>
+						</a><!--/sertificats-list__item-->
+						<a href="#" class="sertificats-list__item">
+							<div class="sertificats-list__info">
+								<span class="sertificats-list__name">Свидетельство о поверке № С-В/14-04-2021/57285752</span>
+								<span class="sertificats-list__data">Действует до 13.04.2022</span>
+							</div>
+							<span class="sertificats-list__link">Посмотреть</span>
+						</a><!--/sertificats-list__item-->
+						<a href="#" class="sertificats-list__item">
+							<div class="sertificats-list__info">
+								<span class="sertificats-list__name">Свидетельство о поверке № С-В/14-04-2021/57285753</span>
+								<span class="sertificats-list__data">Действует до 13.04.2022</span>
+							</div>
+							<span class="sertificats-list__link">Посмотреть</span>
+						</a><!--/sertificats-list__item-->
+						<a href="#" class="sertificats-list__item">
+							<div class="sertificats-list__info">
+								<span class="sertificats-list__name">Сертификат соответствия № EAC.04ИБН1.СМ.5942</span>
+								<span class="sertificats-list__data">Действует до 30.01.2023</span>
+							</div>
+							<span class="sertificats-list__link">Посмотреть</span>
+						</a><!--/sertificats-list__item-->
+						<a href="#" class="sertificats-list__item">
+							<div class="sertificats-list__info">
+								<span class="sertificats-list__name">Разрешение на использование знака «СИСТЕМА КАЧЕСТВА ЕАС»</span>
+								<span class="sertificats-list__data">Действует до 30.01.2023</span>
+							</div>
+							<span class="sertificats-list__link">Посмотреть</span>
+						</a><!--/sertificats-list__item-->
+						<a href="#" class="sertificats-list__item">
+							<div class="sertificats-list__info">
+								<span class="sertificats-list__name">Сертификат соответствия аудитора № EAC.04ИБН1.СМ.5942-02</span>
+								<span class="sertificats-list__data">Действует до 30.01.2023</span>
+							</div>
+							<span class="sertificats-list__link">Посмотреть</span>
+						</a><!--/sertificats-list__item-->
+						<a href="#" class="sertificats-list__item">
+							<div class="sertificats-list__info">
+								<span class="sertificats-list__name">Сертификат соответствия аудитора № EAC.04ИБН1.СМ.5942-03</span>
+								<span class="sertificats-list__data">Действует до 30.01.2023</span>
+							</div>
+							<span class="sertificats-list__link">Посмотреть</span>
+						</a><!--/sertificats-list__item-->
+					</div>
+				</div>
+			</section><!--/sertificats-list-->
 			<div class="box-nav__mobile">
 				<div class="container">
 					<div class="box-nav">
