--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
 	<!--Sprite-->
 	<svg style="display: none;">
+		<symbol id="case-icon" viewBox="0 0 20 18">
+			<g>
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M8 0H12C13.1046 0 14 0.89543 14 2V3H18C19.1046 3 20 3.89543 20 5V16C20 17.1046 19.1046 18 18 18H2C0.89543 18 0 17.1046 0 16V5C0 3.89543 0.89543 3 2 3H6V2C6 0.89543 6.89543 0 8 0ZM2 5H6H14H18V10H11H9H2V5ZM2 16V12H9V13H11V12H18V16H2ZM12 2V3H8V2H12Z"/>
+			</g>
+		</symbol>
 		<symbol id="arrow-unline_2" viewBox="0 0 14 25">
 			<g>
 				<path d="M12.7333 24.7773C13.0214 24.7779 13.2553 24.5447 13.2559 24.2567C13.2561 24.1178 13.2009 23.9845 13.1026 23.8864L1.99571 12.7806L13.1026 1.67476C13.3066 1.47079 13.3066 1.14013 13.1026 0.936174C12.8986 0.732213 12.568 0.732213 12.364 0.936174L0.888865 12.4113C0.685246 12.615 0.685246 12.9452 0.888865 13.1489L12.364 24.624C12.4618 24.7221 12.5947 24.7773 12.7333 24.7773Z"/>
@@ -858,11 +863,11 @@
 					<div class="footer__info">
 						<div class="footer__buttons">
 							<a href="/" class="footer-logo">
+								<img src="assets/images/icons/logo.svg" alt="">
 								<div class="footer-logo__title">
-									<img src="assets/images/icons/logo.svg" alt="">
 									<span>Феникс</span>
+									<span>Научно-производственное объединение</span>
 								</div>
-								<div class="footer-logo__subtitle">Научно-производственное объединение</div>
 							</a>
 							<div class="footer__burger burger">
 								<svg>
