--- a/service-delivery.html
+++ b/service-delivery.html
@@ -476,11 +476,11 @@
 					<div class="footer__info">
 						<div class="footer__buttons">
 							<a href="/" class="footer-logo">
+								<img src="assets/images/icons/logo.svg" alt="">
 								<div class="footer-logo__title">
-									<img src="assets/images/icons/logo.svg" alt="">
 									<span>Феникс</span>
+									<span>Научно-производственное объединение</span>
 								</div>
-								<div class="footer-logo__subtitle">Научно-производственное объединение</div>
 							</a>
 							<div class="footer__burger burger">
 								<svg>
