--- a/index.html
+++ b/index.html
@@ -546,9 +546,9 @@
 								</a>
 								<div class="info-box__info">
 									<div>
-										<div class="info-box__title">
-											<a href="#">Доставка продукции собственным автотранспортом</a>
-										</div>
+										<a href="#" class="info-box__title">
+											<span>Доставка продукции собственным автотранспортом</span>
+										</a>
 										<div class="info-box__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
 									</div>
 									<a href="#" class="info-box__link">
@@ -567,9 +567,9 @@
 								</a>
 								<div class="info-box__info">
 									<div>
-										<div class="info-box__title">
-											<a href="#">Консультационные услуги для предприятий и литейных производств</a>
-										</div>
+										<a href="#" class="info-box__title">
+											<span>Консультационные услуги для предприятий и литейных производств</span>
+										</a>
 										<div class="info-box__description">Консультационные услуги для предприятий горячего цинкования и литейных производств</div>
 									</div>
 									<a href="#" class="info-box__link">
@@ -588,9 +588,9 @@
 								</a>
 								<div class="info-box__info">
 									<div>
-										<div class="info-box__title">
-											<a href="#">Лабораторное исследование металлов и сплавов</a>
-										</div>
+										<a href="#" class="info-box__title">
+											<span>Лабораторное исследование металлов и сплавов</span>
+										</a>
 										<div class="info-box__description">Наша компания предлагает услуги по определению химического состава черных и цветных металлов и сплавов.</div>
 									</div>
 									<a href="#" class="info-box__link">
@@ -707,8 +707,8 @@
 							</a>
 							<div class="info-box__info">
 								<div>
-									<div class="info-box__title">
-										<a href="#">Вторая жизнь металлолома</a>
+									<a href="#" class="info-box__title">
+										<span>Вторая жизнь металлолома</span>
 										<div class="info-box__data info-data">
 											<div class="info-data__number">
 												<img src="assets/images/icons/calendar.svg" alt="">
@@ -719,7 +719,7 @@
 												<span>30</span>
 											</div>
 										</div>
-									</div>
+									</a>
 									<div class="info-box__description">Сдача металлолома позволяет многим организациям, не только навести порядок на своей территории, но и получить весомый доход.</div>
 								</div>
 								<a href="#" class="info-box__link">
@@ -736,8 +736,8 @@
 							</a>
 							<div class="info-box__info">
 								<div>
-									<div class="info-box__title">
-										<a href="#">Цветной металлопрокат: особенности и разновидности</a>
+									<a href="#" class="info-box__title">
+										<span>Цветной металлопрокат: особенности и разновидности</span>
 										<div class="info-box__data info-data">
 											<div class="info-data__number">
 												<img src="assets/images/icons/calendar.svg" alt="">
@@ -748,7 +748,7 @@
 												<span>34</span>
 											</div>
 										</div>
-									</div>
+									</a>
 									<div class="info-box__description">Цветной металлопрокат применяют сегодня в машиностроении и электронике, военном производстве и строительстве, авиастроении и не только.</div>
 								</div>
 								<a href="#" class="info-box__link">
