--- a/service.html
+++ b/service.html
@@ -378,9 +378,9 @@
 								</a>
 								<div class="info-box__info">
 									<div>
-										<div class="info-box__title">
-											<a href="#">Доставка продукции собственным автотранспортом</a>
-										</div>
+										<a href="#" class="info-box__title">
+											<span>Доставка продукции собственным автотранспортом</span>
+										</a>
 										<div class="info-box__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
 									</div>
 									<a href="#" class="info-box__link">
@@ -399,9 +399,9 @@
 								</a>
 								<div class="info-box__info">
 									<div>
-										<div class="info-box__title">
-											<a href="#">Консультационные услуги для предприятий и литейных производств</a>
-										</div>
+										<a href="#" class="info-box__title">
+											<span>Консультационные услуги для предприятий и литейных производств</span>
+										</a>
 										<div class="info-box__description">Консультационные услуги для предприятий горячего цинкования и литейных производств</div>
 									</div>
 									<a href="#" class="info-box__link">
@@ -420,9 +420,9 @@
 								</a>
 								<div class="info-box__info">
 									<div>
-										<div class="info-box__title">
-											<a href="#">Лабораторное исследование металлов и сплавов</a>
-										</div>
+										<a href="#" class="info-box__title">
+											<span>Лабораторное исследование металлов и сплавов</span>
+										</a>
 										<div class="info-box__description">Наша компания предлагает услуги по определению химического состава черных и цветных металлов и сплавов.</div>
 									</div>
 									<a href="#" class="info-box__link">
