--- a/index.html
+++ b/index.html
@@ -631,48 +631,48 @@
 						</div>
 						<div class="partner__slider">
 							<div class="partner__slide">
-								<div class="partner-box">
-									<img src="assets/images/partner_1.png" alt="">
+								<div class="partner-box partner-box_top">
+									<img src="assets/images/partner_1.svg" alt="">
 								</div>
 							</div><!--/partner__slide-->
 							<div class="partner__slide">
 								<div class="partner-box">
-									<img src="assets/images/partner_2.png" alt="">
+									<img src="assets/images/partner_2.svg" alt="">
 								</div>
 							</div><!--/partner__slide-->
 							<div class="partner__slide">
 								<div class="partner-box">
-									<img src="assets/images/partner_3.png" alt="">
+									<img src="assets/images/partner_3.svg" alt="">
 								</div>
 							</div><!--/partner__slide-->
 							<div class="partner__slide">
 								<div class="partner-box">
-									<img src="assets/images/partner_4.png" alt="">
+									<img src="assets/images/partner_4.svg" alt="">
 								</div>
 							</div><!--/partner__slide-->
 							<div class="partner__slide">
 								<div class="partner-box">
-									<img src="assets/images/partner_5.png" alt="">
+									<img src="assets/images/partner_5.svg" alt="">
 								</div>
 							</div><!--/partner__slide-->
 							<div class="partner__slide">
 								<div class="partner-box">
-									<img src="assets/images/partner_6.png" alt="">
+									<img src="assets/images/partner_6.svg" alt="">
 								</div>
 							</div><!--/partner__slide-->
 							<div class="partner__slide">
 								<div class="partner-box">
-									<img src="assets/images/partner_7.png" alt="">
+									<img src="assets/images/partner_7.svg" alt="">
 								</div>
 							</div><!--/partner__slide-->
 							<div class="partner__slide">
 								<div class="partner-box">
-									<img src="assets/images/partner_8.png" alt="">
+									<img src="assets/images/partner_8.svg" alt="">
 								</div>
 							</div><!--/partner__slide-->
 							<div class="partner__slide">
 								<div class="partner-box">
-									<img src="assets/images/partner_9.png" alt="">
+									<img src="assets/images/partner_9.svg" alt="">
 								</div>
 							</div><!--/partner__slide-->
 							<div class="partner__slide">
